// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicPage always show content header 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundSolid"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container DynamicPage-title"
      data-component-name="DynamicPageTitle"
      data-not-clickable="false"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
        data-component-name="DynamicPageTitleBreadcrumbs"
      >
        <div
          class="DynamicPageTitle-breadcrumbs"
        >
          <ui5-breadcrumbs
            design="Standard"
            separator-style="Slash"
            ui5-breadcrumbs=""
          >
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Home
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 1
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 2
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 3
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 4
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 5
            </ui5-breadcrumbs-item>
          </ui5-breadcrumbs>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
            data-component-name="DynamicPageTitleHeader"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
          <div
            class="DynamicPageTitle-content"
            data-component-name="DynamicPageTitleContent"
          >
            <ui5-badge
              color-scheme="1"
              ui5-badge=""
            >
              Status: OK
            </ui5-badge>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear Toolbar-active DynamicPageTitle-toolbar"
          data-component-name="DynamicPageTitleActions"
        >
          <div
            class="Toolbar-toolbar"
            data-component-name="ToolbarContent"
          >
            <span
              class="spacer"
              style="flex-grow: 1; height: 100%; cursor: pointer;"
            />
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <div
                aria-label="Separator"
                class="ToolbarSeparator-separator"
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="full-screen"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="exit-full-screen"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="decline"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitle DynamicPageTitle-subTitleBottom"
          data-component-name="DynamicPageTitleSubHeader"
        >
          <ui5-label
            ui5-label=""
          >
            This is a sub header
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header DynamicPage-header"
      data-component-name="DynamicPageHeader"
      style="top: 0px; z-index: 1;"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBarContainer"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-container"
        data-component-name="DynamicPageAnchorBar"
        role="navigation"
      >
        <ui5-button
          accessible-name="Collapse Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable DynamicPageAnchorBar-anchorBarActionPinnableAndExpandable"
          data-component-name="DynamicPageAnchorBarExpandBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-up"
          tooltip="Collapse Header"
          ui5-button=""
        />
        <ui5-toggle-button
          accessible-name="Unpin Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonPinnable"
          data-component-name="DynamicPageAnchorBarPinBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="pushpin-off"
          pressed="true"
          tooltip="Unpin Header"
          ui5-toggle-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer"
      data-component-name="DynamicPageContent"
      style="padding-bottom: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`DynamicPage hider header button 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundSolid"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container DynamicPage-title"
      data-component-name="DynamicPageTitle"
      data-not-clickable="false"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
            data-component-name="DynamicPageTitleHeader"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear Toolbar-active DynamicPageTitle-toolbar"
          data-component-name="DynamicPageTitleActions"
        >
          <div
            class="Toolbar-toolbar"
            data-component-name="ToolbarContent"
          >
            <span
              class="spacer"
              style="flex-grow: 1; height: 100%; cursor: pointer;"
            />
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitle DynamicPageTitle-subTitleBottom"
          data-component-name="DynamicPageTitleSubHeader"
        >
          <ui5-label
            ui5-label=""
          >
            This is a sub header
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header DynamicPage-header"
      data-component-name="DynamicPageHeader"
      style="top: 0px; z-index: 1;"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBarContainer"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-container"
        data-component-name="DynamicPageAnchorBar"
        role="navigation"
      >
        <ui5-toggle-button
          accessible-name="Unpin Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonPinnable"
          data-component-name="DynamicPageAnchorBarPinBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="pushpin-off"
          pressed="true"
          tooltip="Unpin Header"
          ui5-toggle-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer"
      data-component-name="DynamicPageContent"
      style="padding-bottom: 0px;"
    >
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        />
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="4"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DynamicPage render footer 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundSolid"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBarContainer"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-container"
        data-component-name="DynamicPageAnchorBar"
        role="navigation"
      >
        <ui5-button
          accessible-name="Expand Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable"
          data-component-name="DynamicPageAnchorBarExpandBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-down"
          tooltip="Expand Header"
          ui5-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer"
      data-component-name="DynamicPageContent"
      style="padding-bottom: 1rem;"
    />
    <div
      class="DynamicPage-footer"
      data-component-name="DynamicPageFooter"
      role="contentinfo"
      style="position: absolute;"
    >
      <ui5-bar
        data-sap-ui-fastnavgroup="true"
        design="FloatingFooter"
        ui5-bar=""
      >
        <span
          class="Text-text"
          slot="endContent"
        >
          Footer
        </span>
      </ui5-bar>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DynamicPage with content 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundSolid"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container DynamicPage-title"
      data-component-name="DynamicPageTitle"
      data-not-clickable="false"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
        data-component-name="DynamicPageTitleBreadcrumbs"
      >
        <div
          class="DynamicPageTitle-breadcrumbs"
        >
          <ui5-breadcrumbs
            design="Standard"
            separator-style="Slash"
            ui5-breadcrumbs=""
          >
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Home
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 1
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 2
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 3
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 4
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 5
            </ui5-breadcrumbs-item>
          </ui5-breadcrumbs>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
            data-component-name="DynamicPageTitleHeader"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
          <div
            class="DynamicPageTitle-content"
            data-component-name="DynamicPageTitleContent"
          >
            <ui5-badge
              color-scheme="1"
              ui5-badge=""
            >
              Status: OK
            </ui5-badge>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear Toolbar-active DynamicPageTitle-toolbar"
          data-component-name="DynamicPageTitleActions"
        >
          <div
            class="Toolbar-toolbar"
            data-component-name="ToolbarContent"
          >
            <span
              class="spacer"
              style="flex-grow: 1; height: 100%; cursor: pointer;"
            />
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <div
                aria-label="Separator"
                class="ToolbarSeparator-separator"
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="full-screen"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="exit-full-screen"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="decline"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitle DynamicPageTitle-subTitleBottom"
          data-component-name="DynamicPageTitleSubHeader"
        >
          <ui5-label
            ui5-label=""
          >
            This is a sub header
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header DynamicPage-header"
      data-component-name="DynamicPageHeader"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBarContainer"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-container"
        data-component-name="DynamicPageAnchorBar"
        role="navigation"
      >
        <ui5-button
          accessible-name="Collapse Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable DynamicPageAnchorBar-anchorBarActionPinnableAndExpandable"
          data-component-name="DynamicPageAnchorBarExpandBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-up"
          tooltip="Collapse Header"
          ui5-button=""
        />
        <ui5-toggle-button
          accessible-name="Pin Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonPinnable"
          data-component-name="DynamicPageAnchorBarPinBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="pushpin-off"
          tooltip="Pin Header"
          ui5-toggle-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer"
      data-component-name="DynamicPageContent"
      style="padding-bottom: 0px;"
    >
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem; z-index: 0;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        />
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="4"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        />
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="4"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem; z-index: 0;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        />
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="4"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        />
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="4"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </form>
      <form
        class="Form-form Form-labelSpan4 Form-transparent"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="3"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4; padding-bottom: 1rem;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="5"
          data-grid-row-start="4"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3; padding-bottom: 0px;"
          ui5-label=""
          wrapping-type="Normal"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          data-grid-column-start="17"
          data-grid-row-start="3"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DynamicPage without content 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundSolid"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container DynamicPage-title"
      data-component-name="DynamicPageTitle"
      data-not-clickable="false"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
        data-component-name="DynamicPageTitleBreadcrumbs"
      >
        <div
          class="DynamicPageTitle-breadcrumbs"
        >
          <ui5-breadcrumbs
            design="Standard"
            separator-style="Slash"
            ui5-breadcrumbs=""
          >
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Home
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 1
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 2
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 3
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 4
            </ui5-breadcrumbs-item>
            <ui5-breadcrumbs-item
              ui5-breadcrumbs-item=""
            >
              Page 5
            </ui5-breadcrumbs-item>
          </ui5-breadcrumbs>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
            data-component-name="DynamicPageTitleHeader"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
          <div
            class="DynamicPageTitle-content"
            data-component-name="DynamicPageTitleContent"
          >
            <ui5-badge
              color-scheme="1"
              ui5-badge=""
            >
              Status: OK
            </ui5-badge>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear Toolbar-active DynamicPageTitle-toolbar"
          data-component-name="DynamicPageTitleActions"
        >
          <div
            class="Toolbar-toolbar"
            data-component-name="ToolbarContent"
          >
            <span
              class="spacer"
              style="flex-grow: 1; height: 100%; cursor: pointer;"
            />
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <div
                aria-label="Separator"
                class="ToolbarSeparator-separator"
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="full-screen"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="exit-full-screen"
                ui5-button=""
              />
            </div>
            <div
              class="Toolbar-childContainer"
              data-component-name="ToolbarChildContainer"
            >
              <ui5-button
                design="Transparent"
                icon="decline"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitle DynamicPageTitle-subTitleBottom"
          data-component-name="DynamicPageTitleSubHeader"
        >
          <ui5-label
            ui5-label=""
          >
            This is a sub header
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header DynamicPage-header"
      data-component-name="DynamicPageHeader"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBarContainer"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-container"
        data-component-name="DynamicPageAnchorBar"
        role="navigation"
      >
        <ui5-button
          accessible-name="Collapse Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable DynamicPageAnchorBar-anchorBarActionPinnableAndExpandable"
          data-component-name="DynamicPageAnchorBarExpandBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-up"
          tooltip="Collapse Header"
          ui5-button=""
        />
        <ui5-toggle-button
          accessible-name="Pin Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonPinnable"
          data-component-name="DynamicPageAnchorBarPinBtn"
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="pushpin-off"
          tooltip="Pin Header"
          ui5-toggle-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer"
      data-component-name="DynamicPageContent"
      style="padding-bottom: 0px;"
    />
  </div>
</DocumentFragment>
`;
